# FastFourierTransform

./: .gitignore  CMakeLists.txt
include/: fourier.h
src/: CMakeLists.txt  fourier.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
